SERVER-33383 Prevent internal replSetStepDown from racing with stepdown via heartbeat

(cherry picked from commit 6168a6e7f5586ffc273888bec73b76c1184105bd)